# m65tool

./: .gitignore  .gitmodules  Makefile.am  README.md  confdefs.h  configure.ac  project.mk  superclean.py  unityconf.yml
docs/: dev_cheat_sheet.md  dev_modules.md  dev_style.md  developing.md  testdoc.md
scripts/: build.py  makemake.py
src/: Makefile.am  module_common.mk
src/datastruct/: README.md  datastruct.c  datastruct.h  map.c  map.h  mem.c  mem.h  memlist.c  memlist.h  memtbl.c  memtbl.h  module.cfg  str.c  str.h  strmap.c  strmap.h
src/examplemod/: Makefile.am  examplemod.c  examplemod.h  priv1.c  priv1.h
src/exampletwo/: Makefile.am  exampletwo.c  exampletwo.h
src/m65tool/: Makefile.am  m65tool  m65tool.c  module.cfg
tests/: Makefile.am  test_common.mk
tests/datastruct/: test_datastruct.c  test_map.c  test_mem.c  test_memlist.c  test_memtbl.c  test_str.c  test_strmap.c
tests/examplemod/: Makefile.am  examplemod_test.c  test_examplemod.c
